--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-keyboard-event-handler": "^1.5.2",
     "react-odometerjs": "^2.1.1",
     "react-scripts": "3.2.0"
   },
