--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "hoanglai",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.16.0"
+  },
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
