--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "hoanglai",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://nathan-nhat.github.io/randomVIB",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-keyboard-event-handler": "^1.5.2",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
